changed some mobile styling to fix layout shifting

--- a/styles/Forms.module.scss
+++ b/styles/Forms.module.scss
@@ -5,6 +5,10 @@
   flex-basis: 66.6%;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
+
+  @media (max-width: 830px) {
+    
+  }
 }
 
 .container {
