--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   align-items: center;
 }
@@ -16,8 +16,6 @@
 
   @media (max-width: 1140px) {
     width: 90%;
-    
-
   }
 }
 
@@ -30,6 +28,6 @@
   }
 
   .main {
-    height: 100vh;
+    height: 100dvh;
   }
 }
