--- a/styles/Resume.module.scss
+++ b/styles/Resume.module.scss
@@ -48,11 +48,12 @@
     border-radius: 15px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: white;
-    top: 20%;
+    top: 26%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
-    height: 100%;
+    height: 110%;
+    
   }
 
   .nameContainer {
