--- a/styles/Summary.module.scss
+++ b/styles/Summary.module.scss
@@ -41,6 +41,7 @@
   flex-wrap: wrap;
   gap: 20px;
   margin-top: 40px;
+  overflow: auto;
 }
 
 .skill {
@@ -66,16 +67,20 @@
     border-radius: 15px;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     background-color: white;
-    top: 20%;
+    top: 26%;
     left: 50%;
     transform: translate(-50%, -50%);
     width: 80%;
-    height: 100%;
+    height: 110%;
 
     .header {
       h1 {
         text-align: center;
       }
+    }
+
+    .skill {
+      font-size: 20px ;
     }
   }
 }
