--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,10 @@
   
 }
 
+html {
+  height: -webkit-fill-available;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -11,6 +15,9 @@
 body {
   overflow: hidden;
   font-family: 'Regular', sans-serif;
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
 }
 
 @font-face {
